# cadabra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: install.yaml  tests.yaml
backend/: __main__.py  main.py
backend/cadabra/api/: trays.py
backend/cadabra/models/: trays.py
backend/cadabra/services/: trays.py
docs/: ROADMAP.md
frontend/: .prettierrc.cjs  package.json  pnpm-lock.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_spdx.py
tests/: test_health.py
