[project]
authors = [{ name = "Christian Fobel", email = "christian@fobel.net" }]
name = "cadabra"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["fastapi", "cadquery"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cadabra = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
black = ">=25.1.0,<26"
isort = ">=6.0.1,<7"
ipykernel = ">=6.29.5,<7"
pytest = ">=8.4.1,<9"
nodejs = ">=22.13.0,<22.14"
pre-commit = ">=4.2.0,<5"
markdownlint-cli2 = ">=0.18.1,<0.19"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"
